--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,10 @@
 h2.display-3.text-white {
     font-weight: 500;
 }
+
+
+/* course section start  */
+
+.course-text.ps-4.pe-2 h4 {
+    font-size: 22px;
+}
