--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,16 +15,33 @@
 @media (min-width: 992px) {  }
 
 /* // X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {  }
+@media (min-width: 1200px) {  
+    .section-title.text-center.mb-5 {
+        width: 530px;
+        margin: auto;
+    }
+}
 
 /* // XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) { }
+@media (min-width: 1400px) { 
+    
+    
+}
+
+
+/* Min width  */
+
+
 
 
 
 
 /* // `xxl` applies to x-large devices (large desktops, less than 1400px) */
-@media (max-width: 1399.98px) {  }
+@media (max-width: 1399.98px) {  
+
+
+   
+}
 
 
 
